# git-crew

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt  workflow-template.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
gitcrew/: __init__.py  cli.py  git.py  interactive.py  llm.py  orchestrator.py  report.py
gitcrew/crews/: __init__.py  architecture_crew.py  performance_crew.py  security_crew.py
