[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "git-crew"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["git", "code-review", "ai", "llm", "security", "langGraph", "crewai", "autogen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",   # default provider — included for zero-config startup
    "crewai>=0.80.0",
    "litellm>=1.0.0",          # required by crewai.LLM for non-native providers (groq, mistral, etc.)
    "ag2>=0.11.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Install the package for your LLM provider:
#   pip install "git-crew[openai]"
#   pip install "git-crew[anthropic]"
#   pip install "git-crew[all-providers]"
openai     = ["langchain-openai>=0.2.0"]
anthropic  = ["langchain-anthropic>=0.3.0"]
ollama     = ["langchain-ollama>=0.2.0"]
mistral    = ["langchain-mistralai>=0.2.0"]
google     = ["langchain-google-genai>=2.0.0"]
all-providers = [
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-mistralai>=0.2.0",
    "langchain-google-genai>=2.0.0",
]
dev = ["ruff", "mypy"]

[project.scripts]
git-crew = "gitcrew.cli:main"

[project.urls]
Homepage = "https://github.com/yaseen-vm/git-crew"
Repository = "https://github.com/yaseen-vm/git-crew"
"Bug Tracker" = "https://github.com/yaseen-vm/git-crew/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitcrew*"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["gitcrew"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
